--- a/index.html
+++ b/index.html
@@ -21,26 +21,32 @@
                      <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
                      <li class="nav-item"><a class="nav-link" href="cart.html">Cart</a></li>
                      <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                     <li class="nav-item"><a class="nav-link" href="register.html">Sign Up</a></li>
+                     <li class="nav-item"><a class="nav-link" href="sign.html">Sign In</a></li>
                   </ul>
                </div>
             </nav>
          </div>
       </header>
-      <section class="about_section py-5">
-         <div class="container">
-            <div class="row d-flex align-items-stretch">
-               <div class="col-md-6">
-                  <img src="images/about-img.jpg" class="img-fluid h-100 w-100 object-fit-cover" alt="About Green Leaf">
-               </div>
-               <div class="col-md-6 d-flex">
-                  <div class="bg-white rounded shadow w-100">
-                     <h1>Green Leaf</h1>
-                  </div>
-               </div>
+<section class="about_section py-5">
+   <div class="container">
+    <div class="row d-flex align-items-stretch">
+        <!-- Home Screen Image -->
+         <div class="col-md-6">
+            <img src="images/about-img.jpg" class="img-fluid h-100 w-100 object-fit-cover" alt="About Green Leaf">
+        </div>
+         <!-- Blurb about us -->
+         <div class="col-md-6">
+            <div class="p-4 bg-white shadow-sm">
+               <h1 class="mb-4">Green Leaf</h1>
+               <p>At Green Leaf Tea Shop, we specialize in a variety of handpicked, high-quality teas from around the world. Whether you're a fan of herbal, black, green, or specialty blends, we offer something to delight every tea lover. Our mission is to bring you the freshest and finest teas, expertly curated to give you an unforgettable tea experience.</p>
+               <p>Each cup of tea we serve is carefully crafted to provide the perfect balance of flavor, aroma, and relaxation. We pride ourselves on sourcing only the best organic and sustainably grown tea leaves, ensuring that every sip is as good for the planet as it is for your well-being.</p>
+               <p>Come visit us and explore our wide selection of premium loose-leaf teas, cozy tea accessories, and delectable snacks. Whether you're new to tea or a seasoned enthusiast, our knowledgeable staff is here to guide you on your tea journey.</p>
+               <a href="shop.html" class="btn btn-success">Visit Our Shop</a>
             </div>
          </div>
-      </section>
+      </div>
+   </div>
+</section>
       <footer class="bg-dark text-light text-center py-3">
          <div class="container">
             <p>2025 ENMU CS-344 Team: Rymma Won, Vince Gnoodle, Zoe Martinez, Adan Delgado</p>
@@ -49,3 +55,4 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    </body>
 </html>
+
