--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
          <div class="col-md-6">
             <div class="p-4 bg-white shadow-sm">
                <h1 class="mb-4">Green Leaf</h1>
-               <p>At Green Leaf Tea Shop, we specialize in a variety of handpicked, high-quality teas from around the world. Whether you're a fan of herbal, black, green, or specialty blends, we offer something to delight every tea lover. Our mission is to bring you the freshest and finest teas, expertly curated to give you an unforgettable tea experience.</p>
-               <p>Each cup of tea we serve is carefully crafted to provide the perfect balance of flavor, aroma, and relaxation. We pride ourselves on sourcing only the best organic and sustainably grown tea leaves, ensuring that every sip is as good for the planet as it is for your well-being.</p>
-               <p>Come visit us and explore our wide selection of premium loose-leaf teas, cozy tea accessories, and delectable snacks. Whether you're new to tea or a seasoned enthusiast, our knowledgeable staff is here to guide you on your tea journey.</p>
-               <a href="shop.html" class="btn btn-success">Visit Our Shop</a>
+               <p class="green">At Green Leaf Tea Shop, we specialize in a variety of handpicked, high-quality teas from around the world. Whether you're a fan of herbal, black, green, or specialty blends, we offer something to delight every tea lover. Our mission is to bring you the freshest and finest teas, expertly curated to give you an unforgettable tea experience.</p>
+               <p class="green">Each cup of tea we serve is carefully crafted to provide the perfect balance of flavor, aroma, and relaxation. We pride ourselves on sourcing only the best organic and sustainably grown tea leaves, ensuring that every sip is as good for the planet as it is for your well-being.</p>
+               <p class="green">Come visit us and explore our wide selection of premium loose-leaf teas, cozy tea accessories, and delectable snacks. Whether you're new to tea or a seasoned enthusiast, our knowledgeable staff is here to guide you on your tea journey.</p>
+               <a href="shop.html" class="btn btn-primary">Visit Our Shop</a>
             </div>
          </div>
       </div>
