--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                          <li>Each cup of tea we serve is carefully crafted to provide the perfect balance of flavor, aroma, and relaxation. We pride ourselves on sourcing only the best organic and sustainably grown tea leaves, ensuring that every sip is as good for the planet as it is for your well-being.</li>
                          <li>Come visit us and explore our wide selection of premium loose-leaf teas, cozy tea accessories, and delectable snacks. Whether you're new to tea or a seasoned enthusiast, our knowledgeable staff is here to guide you on your tea journey.</li>
                       </ul>
-                      <a href="shop.html" class="btn btn-success">Visit Our Shop</a>
+                      <a href="shop.html" class="btn btn-primary">Visit Our Shop</a>
                    </div>
                 </div>
             </div>
