--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                       </ul>
                       <div class="btn-leaf">
                          <a href="shop.html" class="btn btn-primary btn-leaf">Visit Our Shop</a>
+                      </div>
                    </div>
                 </div>
             </div>
