--- a/cart.html
+++ b/cart.html
@@ -55,7 +55,23 @@
             <a href="#" class="btn btn-secondary">Apply</a>
         </form>
         </div>
-    
+
+        <div class="credit-card-info--form coupons card">
+            <label class="title">Credit Card Information</label>
+            <div class="input_container">
+                <input id="password_field" class="input_field_credit" type="text" name="input-name" title="title" placeholder="Enter your full name">
+            </div>
+            <div class="input_container">
+                <input id="password_field" class="input_field_credit" type="number" name="input-name" title="title" placeholder="0000 0000 0000 0000">
+            </div>
+            <div class="input_container">
+                <div class="split">
+                    <input id="password_field" class="input_field_credit" type="text" name="input-name" title="Expiry Date" placeholder="01/23">
+                    <input id="password_field" class="input_field_credit" type="number" name="cvv" title="CVV" placeholder="CVV">
+                </div>
+            </div>
+        </div>
+
         <div class="card checkout red">
         <label class="title">Checkout</label>
         <div class="details">
