--- a/orders.html
+++ b/orders.html
@@ -17,7 +17,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                  <ul class="navbar-nav ms-auto gap-3">
-                    <li class="nav-item"><a class="nav-link" href="admin_dashboard.html">Dahboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="admin_dashboard.html">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link active" href="orders.html">Orders</a></li>
                     <li class="nav-item"><a class="nav-link" href="items.html">Items</a></li>
                     <li class="nav-item"><a class="nav-link" href="admin_login.html">Manager Sign Out</a></li>
